(* -*- tuareg -*- *)

let preprocess =
  try
    match Sys.getenv "BISECT_ENABLE" with
    | "yes" -> "(preprocess (pps bisect_ppx))"
    | _ -> ""
  with _ -> ""

let () = Jbuild_plugin.V1.send @@ {|

(library
 (name hello)
 (modules hello)
 |} ^ preprocess ^ {|)

(executable
 (name tester)
 (modules tester)
 (libraries hello))

|}
